--- a/activitats/css/11_Display/activitat1.html
+++ b/activitats/css/11_Display/activitat1.html
@@ -6,21 +6,17 @@
     <title>Document</title>
     <style>
         .enlinealoco {
-            display: block;
+            display: flex;
             display: inline;
             display: inline-block;
-            display: flex;
-            display: inline-flex;
-            display: grid;
-            display: inline-grid;
         }
     </style>
 </head>
 <body>
     <div class="enlinealoco">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nihil maxime et? Nihil, dolores itaque maiores unde doloribus animi, ipsam adipisci dicta similique non natus voluptatum. Facere explicabo voluptate pariatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis obcaecati ipsam assumenda natus vitae dolorem dicta nulla dignissimos consequuntur iure ut culpa ad maxime corrupti, dolorum, repellat consectetur est doloribus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a adipisci quos sint nihil odit ducimus, ad ullam temporibus! Quasi odit provident nostrum ex eos praesentium! Explicabo totam quaerat architecto?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nihil maxime et? Nihil, dolores itaque maiores unde doloribus animi, ipsam adipisci dicta similique non natus voluptatum. Facere explicabo voluptate pariatur.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis obcaecati ipsam assumenda natus vitae dolorem dicta nulla dignissimos consequuntur iure ut culpa ad maxime corrupti, dolorum, repellat consectetur est doloribus.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel a adipisci quos sint nihil odit ducimus, ad ullam temporibus! Quasi odit provident nostrum ex eos praesentium! Explicabo totam quaerat architecto?</p>
     </div>
 </body>
 </html>
