--- a/activitats/curriculum.html
+++ b/activitats/curriculum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum</title>
     <style>
             header{
             background-color: rgb(0, 204, 255);
@@ -29,9 +29,9 @@
 <body style="background-color: cadetblue;">
     <header>
         <p>Ferran</p>
-        <span style="margin-right: 4px;"><a href="activitats/activitats.html">Anar a activitats</a></span>
-        <a href="activitats/curriculum.html">Curriculum</a>
+        <span style="margin-right: 4px;"><a href="activitats.html">Activitats</a></span>
+        <a href="C:\Users\PC GAMING\Documents\GitHub\Web\index.html">Portafoli</a>
     </header>
-    <p>Hola, soc en Ferran, benvingut al meu portafoli, soc un estudiant de SMIX1 a la Caparrella, actualment tinc un nivell de cracio web avançat</p>
+    <img src="../descarga.png">
 </body>
 </html>
