--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -29,8 +29,9 @@
 <body style="background-color: cadetblue;">
     <header>
         <p>Ferran</p>
-        <span style="margin-right: 4px;"><a href="curriculum.html">Curriculum</a></span>
+        <a href="curriculum.html">Curriculum</a>
         <a href="../index.html">Portafoli</a>
+        <a href="../contactam.html">Contactam</a>
     </header>
         <h2> HTML</h2>
             <ul>
