--- a/activitats/curriculum.html
+++ b/activitats/curriculum.html
@@ -29,8 +29,9 @@
 <body style="background-color: cadetblue;">
     <header>
         <p>Ferran</p>
-        <span style="margin-right: 4px;"><a href="activitats.html">Activitats</a></span>
-        <a href="C:\Users\PC GAMING\Documents\GitHub\Web\index.html">Portafoli</a>
+        <a href="activitats.html">Activitats</a>
+        <a href="../index.html">Portafoli</a>
+        <a href="../contactam.html">Contactam</a>
     </header>
     <img src="../descarga.png">
 </body>
