--- a/contactam.html
+++ b/contactam.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafoli</title>
+    <title>Contactam</title>
     <style>
-            header{
+        header{
             background-color: rgb(0, 204, 255);
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             min-height: 70px;
@@ -26,13 +26,21 @@
         }
     </style>
 </head>
-<body style="background-color: cadetblue;">
+<body>
     <header>
         <p>Ferran</p>
+        <a href="index.html">Portafoli</a>
         <a href="activitats/activitats.html">Activitats</a>
         <a href="activitats/curriculum.html">Curriculum</a>
-        <a href="contactam.html">Contactam</a>
     </header>
-    <p>Hola, soc en Ferran, benvingut al meu portafoli, soc un estudiant de SMIX1 a la Caparrella, actualment tinc un nivell de cracio web avançat</p>
+        <fieldset>
+            <label for="Nombre de la empresa">Nom de l'empreas</label>
+                <input id="Nombre de la empresa" type="text" name="Empresa">
+            <label for="Correo">Correu de l'empresa</label>
+                <input id="Correo" type="text" name="Correo">
+            <label for="Puesto">Lloc de treball</label>
+                <input id="Puesto" type="text" name="Puesto">
+            <button type="submit">Enviá</button>
+        </fieldset>
 </body>
 </html>
