--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Activitats</title>
 </head>
-<<<<<<< HEAD
 <body style="background-color: cadetblue;">
+
     <header>
-        <p>Ferran</p>
-        <a href="curriculum.html">Curriculum</a>
-        <a href="../index.html">Portafoli</a>
-        <a href="../contactam.html">Contactam</a>
+        <div class="menu-superior">
+            <p>Ferran</p>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="../index.html">Portafoli</a>
+            <a href="../contactam.html">Contactam</a>
+        </div>
     </header>
-=======
-<body>
-    <a href="Portafoli.html">Tornar al Portafoli</a>
-    <ul>
->>>>>>> fdbf35ca831faa069ea0c9744952f15ce4a3a90a
         <h2> HTML</h2>
             <ul>
                 <h3>Formato</h3>
