--- a/activitats/curriculum.html
+++ b/activitats/curriculum.html
@@ -3,35 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Curriculum</title>
-    <style>
-            header{
-            background-color: rgb(0, 204, 255);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            min-height: 70px;
-            max-height: 100px;
-            display: flex;
-            justify-content: right;
-            align-items: center;
-            padding: 10px;
-            background-color: aqua;
-            justify-content: space-between;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(0, 140, 255);
-        }
-    </style>
 </head>
 <body style="background-color: cadetblue;">
     <header>
+        <div class="menu-superior">
         <p>Ferran</p>
-        <a href="activitats.html">Activitats</a>
-        <a href="../index.html">Portafoli</a>
-        <a href="../contactam.html">Contactam</a>
+            <a href="activitats.html">Activitats</a>
+            <a href="../index.html">Portafoli</a>
+            <a href="../contactam.html">Contactam</a>
+        </div>
     </header>
     <img src="../descarga.png">
 </body>
