--- a/contactam.html
+++ b/contactam.html
@@ -3,30 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Contactam</title>
-    <style>
-        header{
-            background-color: rgb(0, 204, 255);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            min-height: 70px;
-            max-height: 100px;
-            display: flex;
-            justify-content: right;
-            align-items: center;
-            padding: 10px;
-            background-color: aqua;
-            justify-content: space-between;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(0, 140, 255);
-        }
-    </style>
 </head>
-<body>
+<body style="background-color: cadetblue;">
     <header>
         <p>Ferran</p>
         <a href="index.html">Portafoli</a>
@@ -40,7 +20,7 @@
                 <input id="Correo" type="text" name="Correo">
             <label for="Puesto">Lloc de treball</label>
                 <input id="Puesto" type="text" name="Puesto">
-            <button type="submit">Enviá</button>
+            <button type="submit">Envía</button>
         </fieldset>
 </body>
 </html>
