--- a/index.html
+++ b/index.html
@@ -3,45 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+    <link rel="stylesheet" href="styles.css">
     <title>Portafoli</title>
-    <style>
-            header{
-            background-color: rgb(0, 204, 255);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            min-height: 70px;
-            max-height: 100px;
-            display: flex;
-            justify-content: right;
-            align-items: center;
-            padding: 10px;
-            background-color: aqua;
-            justify-content: space-between;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(0, 140, 255);
-        }
-    </style>
 </head>
 <body style="background-color: cadetblue;">
     <header>
-        <p>Ferran</p>
-        <a href="activitats/activitats.html">Activitats</a>
-        <a href="activitats/curriculum.html">Curriculum</a>
-        <a href="contactam.html">Contactam</a>
+        <div class="menu-superior">
+            <p>Ferran</p>
+            <a href="activitats/activitats.html">Activitats</a>
+            <a href="activitats/curriculum.html">Curriculum</a>
+            <a href="contactam.html">Contactam</a>
+        </div>
     </header>
-    <p>Hola, soc en Ferran, benvingut al meu portafoli, soc un estudiant de SMIX1 a la Caparrella, actualment tinc un nivell de cracio web avançat</p>
-=======
-    <title>Document</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Ferran Etienne</h2>
-    <a href="activitats/activitats.html">Anar a activitats</a>
->>>>>>> fdbf35ca831faa069ea0c9744952f15ce4a3a90a
 </body>
 </html>
