--- a/activitats/curriculum.html
+++ b/activitats/curriculum.html
@@ -9,12 +9,12 @@
 <body style="background-color: cadetblue;">
     <header>
         <div class="menu-superior">
-        <p>Ferran</p>
-            <a href="activitats.html">Activitats</a>
-            <a href="../index.html">Portafoli</a>
-            <a href="../contactam.html">Contactam</a>
+            <p>Ferran</p>
+                <a href="activitats.html">Activitats</a>
+                <a href="../index.html">Portafoli</a>
+                <a href="../contactam.html">Contactam</a>
         </div>
     </header>
-    <img src="../descarga.png">
+    <img src="../Currículum Marketing Manager foto Sobrio Azul.jpg">
 </body>
 </html>
