--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <a href="contactam.html">Contactam</a>
         </div>
     </header>
-</head>
-<body>
+    <p>Apasionat sobre l'informatica, em defineixo per ser una persona amb sed de coneixement.</p>
 </body>
 </html>
