--- a/contactam.html
+++ b/contactam.html
@@ -7,7 +7,7 @@
     <title>Contactam</title>
 </head>
 <body style="background-color: cadetblue;">
-    <header>
+    <header class="menu-superior">
         <p>Ferran</p>
         <a href="index.html">Portafoli</a>
         <a href="activitats/activitats.html">Activitats</a>
