--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -13,7 +13,7 @@
             <p>Ferran</p>
             <a href="curriculum.html">Curriculum</a>
             <a href="../index.html">Portafoli</a>
-            <a href="../contactam.html">Contactam</a>
+            <a href="contactam.html">Contactam</a>
         </div>
     </header>
         <h2> HTML</h2>
