--- a/activitats/curriculum.html
+++ b/activitats/curriculum.html
@@ -12,7 +12,7 @@
             <p>Ferran</p>
                 <a href="activitats.html">Activitats</a>
                 <a href="../index.html">Portafoli</a>
-                <a href="../contactam.html">Contactam</a>
+                <a href="contactam.html">Contactam</a>
         </div>
     </header>
     <img src="../Currículum Marketing Manager foto Sobrio Azul.jpg">
