--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>Ferran</p>
             <a href="activitats/activitats.html">Activitats</a>
             <a href="activitats/curriculum.html">Curriculum</a>
-            <a href="contactam.html">Contactam</a>
+            <a href="activitats/contactam.html">Contactam</a>
         </div>
     </header>
     <p>Apasionat sobre l'informatica, em defineixo per ser una persona amb sed de coneixement.</p>
